vbnc/vbnc/vbnc/tests/Errors/30311-29.vb
Imports System
Class T
    Const M_String As int64 = #1/1/2008#
End Class